# htmx-portfolio

./: .gitignore  README.md  djlint.py  pyproject.toml  requirements.txt  tailwind.py  vercel.json
app/: config.py  main.py
app/api/: __init__.py  pages.py
app/config/: __init__.py
app/data/: __init__.py  experience.py  projects.py
app/templates/: base.jinja  index.html  index.jinja
app/templates/about/: about.jinja
app/templates/components/: btn_link.jinja
app/templates/home/: home.html  home.jinja
app/templates/pages/: about.jinja  home.jinja
app/templates/partials/: header.html  header.jinja
app/utils/: img_load.py  svg_load.py
scripts/: djlint.py  images.py  tailwind.py
static/: input.css  output.css
static/images/: hero_q55.avif
static/styles/: globals.css  theme.css
templates/: base.jinja
templates/components/: btn_external.jinja  btn_link.jinja  experience.jinja  icon.jinja  image.jinja
templates/pages/: about.jinja  home.jinja  projects.jinja
templates/partials/: footer.jinja  header.jinja  skill_grid.jinja
